# udp_proxy

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test_all_endpoints.sh  test_set_camera_mode.sh  test_trigger_camera.sh  test_video_click.sh  tsconfig.json
scripts/: build-arm64.sh  create-test-gif.sh  open-report.sh
src/: main.rs
tests/e2e/: camera-actions.spec.ts  test-server.js  video-controls.spec.ts
